--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -13,5 +13,6 @@
       "**/CVS": true,
       "**/.DS_Store": true,
       "**/.theia": true,
-   }
+},
+"python.pythonPath": "/usr/bin/python3"
 }
